# RestrictedPython

./: .coveragerc  .editorconfig  .gitignore  .meta.toml  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTING.md  Compilers.py  Eval.py  Guards.py  INSTALL.txt  Limits.py  MANIFEST.in  MutatingWalker.py  PrintCollector.py  RCompile.py  RCompile_2_1.py  README.rst  README.txt  RestrictionMutator.py  SafeMapping.py  SelectCompiler.py  Utilities.py  __init__.py  appveyor.yml  bootstrap.py  buildout.cfg  constraints.txt  develop.py  notes.txt  pyproject.toml  pytest.ini  setup.cfg  setup.cfg.in  setup.py  test.py  tox.ini
.github/workflows/: codeql.yml  pre-commit.yml  tests.yml
compiler/: future.py  pyassem.py  pycodegen.py  symbols.py  transformer.py  visitor.py
compiler_2_1/: __init__.py  ast.py  future.py  pyassem.py  pycodegen.py  symbols.py  transformer.py  visitor.py
docs/: CHANGES.rst  Makefile  conf.py  dep.txt  idea.rst  index.rst  notes.rst  old_README.rst  requirements.txt  update_notes.rst
docs/RestrictedPython3/: index.rst
docs/RestrictedPython4/: index.rst
docs/api/: index.rst
docs/basics/: index.rst
docs/contributing/: changes_from26to27.rst  changes_from30to31.rst  changes_from310to311.rst  changes_from311to312.rst  changes_from312to313.rst  changes_from313to314.rst  changes_from31to32.rst  changes_from32to33.rst  changes_from33to34.rst  changes_from34to35.rst  changes_from35to36.rst  changes_from36to37.rst  changes_from38to39.rst  changes_from39to310.rst  index.rst
docs/install/: index.rst
docs/roadmap/: index.rst
docs/update/: index.rst
docs/upgrade/: index.rst
docs/upgrade_dependencies/: index.rst
docs/usage/: api.rst  basic_usage.rst  framework_usage.rst  index.rst  policy.rst
docs_de/: Makefile  call.txt  conf.py  idee.rst  index.rst  make.bat
docs_de/RestrictedPython4/: index.rst
tests/: __init__.py  before_and_after.py  before_and_after24.py  helper.py  restricted_module.py  security_in_syntax.py  testRestrictions.py  test_Guards.py  test_NamedExpr.py  test_Utilities.py  test_base_example.py  test_compile.py  test_compile_restricted_function.py  test_eval.py  test_generator_escape.py  test_imports.py  test_iterating_over_dict_items.py  test_niceParse.py  test_print.py  test_print_function.py  test_print_stmt.py  test_restrictions.py  test_transformer.py  test_unicode.py  test_utilities.py  verify.py
workspace/: develop.py
(+155 files in other folders)
