# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/pure-python
[build-system]
requires = [
    "setuptools >= 78.1.1,< 82",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "RestrictedPython"
version = "8.3.dev0"
description = "RestrictedPython is a defined subset of the Python language which allows to provide a program input into a trusted environment."
license = "ZPL-2.1"
classifiers = [
    "Development Status :: 6 - Mature",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Typing :: Typed",
]
dynamic = ["readme"]
requires-python = ">=3.10, <3.16"
authors = [
    {name = "Zope Foundation and contributors",email = "zope-dev@zope.dev"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
keywords = [
    "restricted",
    "execution",
    "security",
    "untrusted",
    "code",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]
docs = [
    "Sphinx",
    "furo",
]
typecheck = [
    "mypy",
    "typeshed",
]

[project.urls]
Documentation = "https://restrictedpython.readthedocs.io/"
Issues = "https://github.com/zopefoundation/RestrictedPython/issues"
Source = "https://github.com/zopefoundation/RestrictedPython"
Changelog = "https://github.com/zopefoundation/RestrictedPython/blob/master/CHANGES.rst"

[tool.coverage.run]
branch = true
source = ["RestrictedPython"]

[tool.coverage.report]
fail_under = 97.1
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}

